# audio-processing-pipeline

./: .env.example  .gitignore  AudioPipeline.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_AUDIT.md  README.md  advanced_pipeline.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py  termux_install.sh  watcher.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
docs/: ARCHITECTURE.md  TERMUX.md
tests/: test_advanced_pipeline.py  test_watcher.py
