[project]
name = "audio-processing-pipeline"
version = "2.0.0"
description = "Production-grade audio pipeline for phone calls: clean, transcribe, diarize, split by speaker."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.0.0",
    "onnxruntime>=1.17.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
automation = [
    "watchdog>=4.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
]
pyannote = [
    "pyannote.audio>=3.1.0",
]
ecapa = [
    "speechbrain>=1.0.0",
    "torchaudio>=2.2.0",
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[project.scripts]
audio-pipeline = "advanced_pipeline:main"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "E401",  # multiple imports on one line — used intentionally in optional-import blocks
    "E402",  # module-level import not at top — AudioPipeline.py bootstraps deps first
    "E701",  # multiple statements on one line — used for compact guard clauses
    "E702",  # multiple statements on one line (semicolon) — stylistic
    "B008",  # function calls in default arguments
    "B904",  # raise without from inside except — acceptable in subprocess wrappers
    "C408",  # unnecessary dict/list/tuple call — readability preference
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert statements are fine in tests

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
